# devout

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-ZLIB  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: example.rs
src/: lib.rs  std.rs  web.rs
