[package]
name = "devout"
version = "0.0.1"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"
license = "MIT / BSL-1.0"
documentation = "https://docs.rs/devout"
repository = "https://github.com/libcala/devout"
readme = "README.md"
description = "A simple cross-platform logging library."
keywords = ["logging", "print", "wasm"]

[target.'cfg(target_arch = "wasm32")'.dependencies.cala_core]
path = "../cala_core"

[features]
default = []
devel = []
